force-app/main/default/objects/Territory_Mapping__c/Territory_Mapping__c.object-meta.xml
<CustomObject>
    <description>CRM : TAM Mapping - TAM for Territory/Region/Sub-Region/Country/State/City/Industry. Used to set ownership for Account/Opportunity/Deal Registration Leads.</description>
    <label>Territory Mapping</label>
    <nameField>
        <label>Territory Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>