force-app/main/default/objects/Territory_Mapping__c/fields/All_fields__c.field-meta.xml
<CustomField>
    <fullName>All_fields__c</fullName>
    <formula>TEXT(Region__c) + Country__r.Name + State__c + City__c + TEXT(Industry__c)</formula>
    <label>All fields</label>
    <type>Text</type>
</CustomField>