force-app/main/default/objects/Territory_Mapping__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country_List__c</referenceTo>
    <relationshipLabel>Territory Mappings</relationshipLabel>
    <relationshipName>Territory_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>