force-app/main/default/objects/Territory_Mapping__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Architecture, Eng and Construction</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Cloud Service Provider</fullName>
            </value>
            <value>
                <fullName>Defense/Government</fullName>
            </value>
            <value>
                <fullName>Financial Services Industry (FSI)</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>Higher Ed/Research</fullName>
            </value>
            <value>
                <fullName>IT Services</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Media/Entertainment</fullName>
            </value>
            <value>
                <fullName>Medical Imaging/Life Sci instruments</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas/Energy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Retail/Etail</fullName>
            </value>
            <value>
                <fullName>Supercomputing</fullName>
            </value>
            <value>
                <fullName>Telecommunications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>