force-app/main/default/objects/Territory_Mapping__c/fields/Territory_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Territory_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>