force-app/main/default/objects/Territory_Mapping__c/fields/Unique_Check__c.field-meta.xml
<CustomField>
    <fullName>Unique_Check__c</fullName>
    <label>Unique Check</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>