force-app/main/default/objects/Territory_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Country__c</columns>
    <columns>State__c</columns>
    <columns>City__c</columns>
    <columns>Industry__c</columns>
    <columns>Unique_Check__c</columns>
    <columns>All_fields__c</columns>
    <columns>Territory_Account_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>